[package]
name = "labexs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["cookies"] }
tokio = { version = "1.27.0", features = ["full"] }
cookie = "0.17"
scraper = "0.15.0"

